test golang + supabase
