# app/model/auth.go
@@ -1,0 +1,6 @@
+package model
+
+type Auth struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
