# app/model/user.go
@@ -2,30 +2,30 @@ package model
 
 import (
 	"time"
+
+	"github.com/google/uuid"
 )
 
 // User struct to describe User object.
 type User struct {
-	ID        int        `db:"id"`
-	CreatedAt time.Time  `db:"created_at"`
-	UpdatedAt *time.Time `db:"updated_at"`
-	IsActive  bool       `db:"is_active"`
-	IsDeleted bool       `db:"is_deleted"`
-	IsAdmin   bool       `db:"is_admin"`
-	UserName  string     `db:"username"`
-	Email     string     `db:"email"`
-	Password  string     `db:"password"`
-	FirstName string     `db:"first_name"`
-	LastName  string     `db:"last_name"`
+	ID           uuid.UUID `db:"id" json:"id"`
+	Email        string    `db:"email" json:"email"`
+	Name         string    `db:"name" json:"name"`
+	Username     *string   `db:"username" json:"username,omitempty"`
+	PasswordHash *string   `db:"password_hash" json:"-"` // never expose
+	IsActive     bool      `db:"is_active" json:"is_active"`
+	IsAdmin      bool      `db:"is_admin" json:"is_admin"`
+	CreatedAt    time.Time `db:"created_at" json:"created_at"`
+	UpdatedAt    time.Time `db:"updated_at" json:"updated_at"`
+	IsDeleted    bool      `db:"is_deleted"`
+	UserName     string    `db:"username"`
+	Password     string    `db:"password"`
+	FirstName    string    `db:"first_name"`
+	LastName     string    `db:"last_name"`
 }
 
 func NewUser() *User {
 	return &User{}
-}
-
-type Auth struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
 }
 
 type CreateUser struct {
