# docs/swagger.yaml
@@ -1,31 +1,13 @@
 definitions:
-  dto.User:
-    properties:
-      created_at:
-        type: string
-      email:
-        type: string
-      first_name:
-        type: string
-      id:
-        type: integer
-      is_active:
-        type: boolean
-      is_admin:
-        type: boolean
-      last_name:
-        type: string
-      updated_at:
-        type: string
-      username:
-        type: string
-    type: object
   model.Auth:
     properties:
       password:
         type: string
       username:
         type: string
+    required:
+    - password
+    - username
     type: object
   model.Book:
     properties:
@@ -56,36 +38,6 @@ definitions:
     - title
     - user_id
     type: object
-  model.CreateUser:
-    properties:
-      email:
-        maxLength: 150
-        type: string
-      first_name:
-        maxLength: 100
-        type: string
-      is_active:
-        type: boolean
-      is_admin:
-        type: boolean
-      last_name:
-        maxLength: 100
-        type: string
-      password:
-        maxLength: 100
-        minLength: 10
-        type: string
-      username:
-        maxLength: 50
-        minLength: 5
-        type: string
-    required:
-    - email
-    - first_name
-    - last_name
-    - password
-    - username
-    type: object
   model.ErrorResponse:
     properties:
       code:
@@ -114,22 +66,6 @@ definitions:
       msg:
         example: Token will be expired within 15 minutes
         type: string
-    type: object
-  model.UpdateUser:
-    properties:
-      first_name:
-        maxLength: 100
-        type: string
-      is_active:
-        type: boolean
-      is_admin:
-        type: boolean
-      last_name:
-        maxLength: 100
-        type: string
-    required:
-    - first_name
-    - last_name
     type: object
 info:
   contact:
@@ -340,6 +276,26 @@ paths:
       summary: update a book
       tags:
       - Book
+  /v1/projects:
+    get:
+      responses: {}
+    post:
+      responses: {}
+  /v1/projects/{id}:
+    delete:
+      responses: {}
+    put:
+      responses: {}
+  /v1/tasks:
+    get:
+      responses: {}
+    post:
+      responses: {}
+  /v1/tasks/{id}:
+    delete:
+      responses: {}
+    put:
+      responses: {}
   /v1/token/new:
     post:
       consumes:
@@ -379,186 +335,13 @@ paths:
       tags:
       - Token
   /v1/users:
-    get:
-      consumes:
-      - application/json
-      description: Get all exists user.
-      parameters:
-      - description: Page no
-        in: query
-        name: page
-        type: integer
-      - description: records per page
-        in: query
-        name: page_size
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Ok
-          schema:
-            $ref: '#/definitions/dto.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: get all exists user
-      tags:
-      - User
     post:
-      consumes:
-      - application/json
-      description: Create a new user.
-      parameters:
-      - description: Create new user
-        in: body
-        name: createuser
-        required: true
-        schema:
-          $ref: '#/definitions/model.CreateUser'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Ok" status "Ok
-          schema:
-            $ref: '#/definitions/dto.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: create a new user
-      tags:
-      - User
+      responses: {}
   /v1/users/{id}:
     delete:
-      consumes:
-      - application/json
-      description: delete user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Ok
-          schema: {}
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: delete a user
-      tags:
-      - User
-    get:
-      consumes:
-      - application/json
-      description: a user.
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Ok
-          schema:
-            $ref: '#/definitions/dto.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: get a user
-      tags:
-      - User
+      responses: {}
     put:
-      consumes:
-      - application/json
-      description: first_name, last_name, is_active, is_admin only
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Update a user
-        in: body
-        name: updateuser
-        required: true
-        schema:
-          $ref: '#/definitions/model.UpdateUser'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Ok
-          schema:
-            $ref: '#/definitions/dto.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: update a user
-      tags:
-      - User
+      responses: {}
 securityDefinitions:
   ApiKeyAuth:
     in: header
